# api-rs

./: Cargo.toml  README.md  docker-compose.yml  flow_test.sh
_k8s/: test.yml
_k8s/base/: kustomization.yml
_k8s/base/api/: deploy.yml  svc.yml
_k8s/base/db/: statefulset.yml  svc.yml
_k8s/dev/: kustomization.yml  namespace.yml
_k8s/dev/pgadmin/: deploy.yml
app/: Cargo.toml  Dockerfile  flow_test.sh
app/src/: auth.rs  crypto.rs  dto.rs  error.rs  handlers.rs  lib.rs  models.rs  repository.rs  schema.rs  seed.rs
migrations/2021-10-16-175923_create_users/: up.sql
postgres-docker/: Dockerfile  init.sql
src/: dto.rs  lib.rs  repository.rs  seed.rs
