[package]
name = "api-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "=7.2"
chrono = "0.4"
thiserror = "1.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
